@@ -1365,7 +1365,7 @@ BEGIN
     EDITTEXT        IDC_TRAIL_EDIT,69,147,31,14,ES_AUTOHSCROLL
 END
 
-IDD_PROPBACKGLASS_VISUALS DIALOGEX 0, 0, 125, 172
+IDD_PROPBACKGLASS_VISUALS DIALOGEX 0, 0, 125, 188
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
@@ -1391,6 +1391,8 @@ BEGIN
     LTEXT           "Y Offset",IDC_STATIC,7,157,67,8
     LTEXT           "&Z Scale",IDC_STATIC,7,130,67,8
     EDITTEXT        IDC_TABLE_SCALEZ,80,128,40,12,ES_AUTOHSCROLL
+    LTEXT           "Z Offset",IDC_STATIC,7,171,67,8
+    EDITTEXT        110,80,169,40,12,ES_AUTOHSCROLL
 END
 
 IDD_PROPBACKGLASS_PHYSICS DIALOGEX 0, 0, 125, 230
@@ -1705,7 +1707,7 @@ BEGIN
 
     IDD_PROPBACKGLASS_VISUALS, DIALOG
     BEGIN
-        BOTTOMMARGIN, 160
+        BOTTOMMARGIN, 185
     END
 END
 #endif    // APSTUDIO_INVOKED
